--- a/segundaEntrega/src/main/webapp/resources/css/styles.css
+++ b/segundaEntrega/src/main/webapp/resources/css/styles.css
@@ -19,3 +19,10 @@
    text-align:center;
    background:none repeat scroll 0 0 #D3D3D3;
 }
+
+.column1{
+	display:inline-block;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
